# fuzzytool.github.io

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  mkdocs.yml  paper.bib  paper.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release-pypi.yml
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/sidecar/: fuzzy_server.py
desktop/src/: editor.ts  main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
docs/: citing.md  comparison.md  desktop.md  extending.md  getting-started.md  index.md  installation.md  integrations.md
docs/api/: python.md
docs/guide/: anfis.md  batch-and-io.md  clustering.md  defuzzification.md  fraud-alert.md  ftransform.md  mamdani.md  mcdm.md  membership.md  rule-learning.md  rules.md  tsk.md  type2.md  visualization.md
docs/tutorials/: anfis-learning.md  clustering-segmentation.md  risk-advisor.md  topsis-decision.md
examples/: anfis.py  clustering.py  credit_risk.py  credit_risk_it2.py  fraud_alert.py  ftransform.py  mcdm.py
fuzzytool/: __init__.py  anfis.py  cluster.py  datasets.py  defuzz.py  ftransform.py  fuzzynum.py  learn.py  mcdm.py  membership.py  norms.py  rules.py  serialize.py  sets.py  viz.py
fuzzytool/inference/: __init__.py  mamdani.py  tsk.py  tsukamoto.py
fuzzytool/integrations/: __init__.py  _util.py  agents.py  optuna.py  pandas.py  parallel.py  scipy.py  sklearn.py  torch.py  turboswarm.py
fuzzytool/type2/: __init__.py  general.py  inference.py  reduction.py  sets.py
notebooks/: 01_quickstart.ipynb  02_type2.ipynb  03_clustering.ipynb  04_learning.ipynb  README.md
tests/: test_cluster.py  test_engineering.py  test_inference.py  test_integrations.py  test_learn.py  test_learning.py  test_mcdm.py  test_membership.py  test_type2.py
