# Pure-Python package built with Hatchling.
# Develop:  pip install -e ".[dev,viz,docs]"
# Build:    python -m build   (wheel + sdist in dist/)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuzzytool"
version = "0.5.1"
description = "A clean, extensible fuzzy-logic toolkit in pure Python + NumPy"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jose L. Salmeron" }]
keywords = ["fuzzy logic", "fuzzy inference", "mamdani", "takagi-sugeno", "type-2", "anfis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
viz = ["matplotlib>=3.4"]
pandas = ["pandas>=1.3"]
sklearn = ["scikit-learn>=1.0"]
torch = ["torch>=1.12"]
scipy = ["scipy>=1.7"]
optuna = ["optuna>=3.0"]
parallel = ["joblib>=1.0"]
dask = ["dask>=2022.0"]
agents = ["langchain-core>=0.1"]
turboswarm = ["turboswarm>=0.7"]
dev = ["pytest>=7", "pytest-cov", "ruff", "pandas>=1.3", "scikit-learn>=1.0",
       "scipy>=1.7", "optuna>=3.0", "joblib>=1.0", "langchain-core>=0.1"]
docs = ["mkdocs-material", "mkdocstrings[python]"]
notebooks = ["jupyter", "nbconvert", "nbformat", "ipykernel", "matplotlib>=3.4"]

[project.urls]
Homepage = "https://fuzzytool.github.io"
Documentation = "https://fuzzytool.github.io"
Repository = "https://github.com/fuzzytool/fuzzytool.github.io"
Issues = "https://github.com/fuzzytool/fuzzytool.github.io/issues"

[tool.hatch.build.targets.wheel]
packages = ["fuzzytool"]

[tool.hatch.build.targets.sdist]
# The Tauri desktop prototype is not part of the Python distribution.
exclude = ["desktop"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.md'"
testpaths = ["tests", "fuzzytool"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
