[package]
name = "fuzzytool-desktop"
version = "0.1.0"
description = "Tauri desktop prototype for fuzzytool (Python sidecar)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
